Made facets collapsible on home page.  No state is retained.

--- a/fieldcapture-hubs-plugin/web-app/css/capture.css
+++ b/fieldcapture-hubs-plugin/web-app/css/capture.css
@@ -591,6 +591,13 @@ ul.facetValues {
     margin-left: 7px;
 }
 
+#facetsContent i.icon-chevron-down {
+    margin-top:5px;
+}
+#facetsContent i.icon-chevron-right {
+    margin-top:3px;
+}
+
 .currentFilters {
     background-color: #faf8f1;
     padding: 1px 5px;
