--- a/fieldcapture-hubs-plugin/web-app/css/capture.css
+++ b/fieldcapture-hubs-plugin/web-app/css/capture.css
@@ -864,3 +864,17 @@ input[type="checkbox"] { -webkit-appearance: checkbox; !important }
     text-align : left;
     margin-left: 10px;
 }
+
+.organisation-header {
+
+    margin-top: -10px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.organisation-banner {
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: #f0f0e8;
+}
