--- a/fieldcapture-hubs-plugin/web-app/css/capture.css
+++ b/fieldcapture-hubs-plugin/web-app/css/capture.css
@@ -877,11 +877,21 @@ input[type="checkbox"] { -webkit-appearance: checkbox; !important }
     background-repeat: no-repeat;
     background-position: right;
     background-color: #f0f0e8;
+    padding-left:20px;
+    padding-right:20px;
+}
+
+.banner .header-text {
+    float:left;
+    margin-left:10px;
+}
+.banner .header-text h2,.header-text h4 {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .banner .logo {
     height:110px;
-    margin-left:10px;
     margin-bottom:10px;
     float:left;
 }
@@ -898,4 +908,12 @@ input[type="checkbox"] { -webkit-appearance: checkbox; !important }
 #carousel {
     max-height: 512px;
     overflow: hidden;
+}
+
+.well-title {
+    border-bottom: 1px solid lightgrey;
+    font-weight: bold;
+    padding-bottom:5px;
+    margin-bottom:10px;
+    font-size:larger;
 }
