--- a/fieldcapture-hubs-plugin/web-app/css/capture.css
+++ b/fieldcapture-hubs-plugin/web-app/css/capture.css
@@ -84,7 +84,7 @@
 .output-block .required label,  .validationEngineContainer .required label {
     position:relative;
 }
-.output-block .required label:after, .output-block th.required:after, .validationEngineContainer .required label:after {
+.output-block .required label:after, .output-block th.required:after, .validationEngineContainer .required label:after, .validationEngineContainer th.required:after {
     content: "*";
     font-weight:bold;
     font-size:1.5em;
@@ -93,7 +93,7 @@
     white-space: nowrap;
 }
 
-.ie .output-block .required label:after, .ie .output-block th.required:after, .ie .validationEngineContainer .required label:after {
+.ie .output-block .required label:after, .ie .output-block th.required:after, .ie .validationEngineContainer .required label:after, .ie .validationEngineContainer th.required:after {
     font-size:1em;
 }
 .postLabel {
